# demo-dsc

./: .env.example  .gitattributes  .gitignore  .sqlfluff  README.md  copier.yml  example.env  justfile  prek.toml  pyproject.toml  pyproject.toml.jinja  tach.toml  tach.toml.jinja
.github/workflows/: ci.yml
config/: .base_hpo.yaml  .base_multi.yaml  .base_single.yaml  .exp_hpo.yaml  .exp_multi.yaml  .exp_single.yaml  _base_multirun.yaml
config/experiment/: README.md  example.yaml  example_hpo.yaml  example_multi.yaml  example_single.yaml
configs/: example_1.yaml  old_basic.yaml  random.yaml
configs/experiment/: example.yaml  random.yaml
configs/model/: base.yaml
configs/model/steps/: default.yaml  extra.yaml  preprocessing.yaml  regressor.yaml
notebooks/: README.md  template.ipynb  template.ipynb.jinja
src/project/: __init__.py  types.py  version.py
src/project/config/: __init__.py  callbacks.py  dataloader_store.py  db.py  db_store.py  exception_logger.py  hydra.py  hydra_store.py  make_cli.py  model.py  model_store.py  util.py  validator_store.py
src/project/config/stores/: __init__.py  dataloader_store.py  dataprocessor_store.py  db_store.py  hydra_store.py  model_store.py  util.py  validator_store.py
src/project/data/: README.md  __init__.py  _cache.py  load.py  model.py  preprocess.py
src/project/data/load/: README.md  __init__.py  _cache.py  core.py
src/project/data/load/sql/: feature1.sql  index.sql  target.sql
src/project/data/process/: README.md  __init__.py  core.py
src/project/data/sql/: README.md  feature1.sql  target.sql
src/project/data/validate/: __init__.py  base.py  processed.py  raw.py
src/project/data/validation/: README.md  __init__.py  base.py  checks.py  processed.py  raw.py
src/project/entrypoints/: README.md  cli.py  evaluate.py  predict.py  train.py
src/project/entrypoints/cli/: example.py  old_basic.py  train.py
src/project/features/: README.md  __init__.py
src/project/models/: README.md  __init__.py
src/project/util/: README.md  __init__.py  logging_vars.py
src/{{ package_name }}/config/: README.md  __init__.py  exception_logger.py  make_cli.py
src/{{ package_name }}/config/stores/: README.md  validator_store.py
src/{{ package_name }}/data/load/: _cache.py  core.py
src/{{ package_name }}/data/process/: core.py
src/{{ package_name }}/data/validate/: README.md
src/{{ package_name }}/entrypoints/: __init__.py
tests/: conftest.py
tests/config/: test_db_store.py  test_db_store.py.jinja  test_exception_logger.py  test_exception_logger.py.jinja  test_model_store.py  test_model_store.py.jinja  test_util.py  test_util.py.jinja
tests/data/: test_cache.py  test_load_sql_files.py
tests/data/load/: test_cache.py  test_cache.py.jinja  test_fetch_data.py  test_fetch_data.py.jinja  test_load_sql_files.py  test_load_sql_files.py.jinja
tests/data/process/: test_process_data.py  test_process_data.py.jinja
tests/data/validate/: test_datamodel.py  test_datamodel.py.jinja  test_is_int_check.py  test_is_int_check.py.jinja  test_raw.py
tests/data/validation/: test_datamodel.py  test_is_int_check.py
tests/util/: test_logging_vars.py
