[project]
name = "project"
version = "0"
requires-python = "==3.13.*"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-zen>=0.16.0",
    "pandera[polars]>=0.27.1",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "interrogate>=1.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[project.scripts]
project = "project.entrypoints.cli.train:main"
old = "project.entrypoints.cli.old_basic:main"
example = "project.entrypoints.cli.example:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",     # organize-imports
    "UP006", # non-pep585-annotation
    "UP035", # deprecated-import
]

[tool.ruff.format]
line-ending = "lf"

[tool.importlinter]
root_packages = ["project", "tests"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "project.entrypoints",
    "project.component_a | project.component_b",
    "project.utils",
]

[[tool.importlinter.contracts]]
name = "No IO in business logic"
type = "protected"
protected_modules = ["project.utils.io"]
allowed_importers = ["project.entrypoints"]

[[tool.importlinter.contracts]]
name = "No test leakage in production code"
type = "protected"
protected_modules = ["tests"]
allowed_importers = []

[tool.interrogate]
omit-covered-files = true
verbose = 2
fail-under = 100
whitelist-regex = ["test_.*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
