[project]
name = "project"
version = "0"
requires-python = "==3.13.*"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-zen>=0.16.0",
    "joblib>=1.5.3",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "pandera[pandas]>=0.27.1",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "interrogate>=1.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[project.scripts]
project = "project.entrypoints.cli:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
override-dependencies = [
    "optuna>=2.10.0",
    "sqlalchemy>=1.3.0"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",     # organize-imports
    "UP006", # non-pep585-annotation
    "UP035", # deprecated-import
]

[tool.ruff.format]
line-ending = "lf"

[tool.importlinter]
root_packages = ["project", "tests"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "project.entrypoints",
    "project.component_a | project.component_b",
    "project.utils",
]

[[tool.importlinter.contracts]]
name = "No IO in business logic"
type = "protected"
protected_modules = ["project.utils.io"]
allowed_importers = ["project.entrypoints"]

[[tool.importlinter.contracts]]
name = "No test leakage in production code"
type = "protected"
protected_modules = ["tests"]
allowed_importers = []

[tool.interrogate]
omit-covered-files = true
verbose = 2
fail-under = 100
whitelist-regex = ["test_.*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
